CHATS_SIT/force-app/main/default/objects/Allegation_Note__c.object
<CustomObject>
    <fields>
        <fullName>Body__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Body</label>
        <length>3200</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IPV_Information__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>IPV Information</label>
        <referenceTo>IPV_Information__c</referenceTo>
        <relationshipLabel>IPV Note</relationshipLabel>
        <relationshipName>Allegation_Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Note_Type__c</fullName>
        <label>Note Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Allegation</fullName>
                </value>
                <value>
                    <fullName>Investigation</fullName>
                </value>
                <value>
                    <fullName>Disqualification</fullName>
                </value>
                <value>
                    <fullName>Reversal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>IPV Note</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Note Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IPV Notes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>